<resources>
    <string name="app_name">Power Share</string>
    <string name="logout">Logout</string>
    <string name="settings">Definições</string>
    <string name="privacy">Política de privacidade</string>
    <string name="iota_settings">Ver o saldo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">palavra-passe</string>
    <string name="prompt_confirm_password">Confirme a palavra-passe</string>
    <string name="button_login">Login</string>
    <string name="sentence_register">Ainda não tem conta? Registe-se agora</string>
    <string name="cycle_info_title">Onde encontrar informação sobre o seu ciclo:</string>
    <string name="cycle_info_par1">Para saber qual o seu ciclo contratado deve contactar a sua empresa de eletricidade (Empresa de Eletricidade da Madeira).
        Poderá fazê-lo através dos seguintes contactos:</string>
    <string name="cycle_contact1">Lojas da EEM, abertas das 8h30 às 12h30 e das 13h30 às 16h00</string>
    <string name="cycle_contact2"><b>Linha da EEM: </b>800 221 187 (chamada gratuita)</string>
    <string name="cycle_contact3"><b>Fax: </b>291 233 324</string>
    <string name="cycle_contact4"><b>Email: </b><u>clientes@eem.pt</u></string>
    <string name="cycle_contact5"><b>Endereço: </b>EEM - Empresa de Eletricidade da Madeira, S.A. Av. do Mar e das Comunidades Madeirenses, 32 9064-501 Funchal </string>
    <string name="cycle_contact6"><u>Formulário eletrónico</u>, a resposta a este formulário é comunicada através do email indicado no mesmo.</string>
    <string name="privacy_policy_title">Politica de Privacidade</string>
    <string name="privacy_policy_par1">Ao partilhar a sua informação connosco, nós conseguimos fazer melhor o nosso trabalho - para lhe mostrar um feedback personalizado do seu consumo e produção de energia e ajudar a conectar-se mais facilmente com compradores e vendedores. Ao usar os nossos serviços, queremos deixar claro de que forma vamos utilizar a informação que nos fornece e de que forma protegemos a sua privacidade. Esta politica aplica-se à informação que nos fornece automaticamente ao utilizar a nossa aplicação, quando se regista e interage com conteúdo ou utiliza componentes que são fornecidos por entidades externas. \n\n
Esta política define:\n\n
- Quem guarda a informação e porquê;\n
- Que tipo de informação é guardada;\n
- Como é usada a informação que é guardada;\n
- Os seus direitos de ver e alterar a informção que nos forneceu voluntariamente;\n
- Como asseguramos a informação.</string>
    <string name="privacy_policy_subtitle1">Quem guarda a informação e porquê</string>
    <string name="privacy_policy_subtitle1_text">A informação que nos fornece ao utilizar a aplicação é guardada pelo Madeira-Interactive Technologies Institute (M-ITI) e é usada apenas para fins cientificos.\n\nEsta aplicação pretende testar a possibilidade de um modelo de negócio para as soluções tecnológicas implementadas no âmbito do projeto SMILE. O modelo de negócio testado é baseado na análise das transações que o utilizador fará na plataforma, nas interações com as mesmas e na informação adicional que decidir partilhar connosco, como quais os seus padrões de produção e consumo de energia. Tenha em consideração que as transações efectuadas na aplicação vão ser simuladas, uma vez que não há troca de energia e/ou dinheiro, e o utilizador não tem que nos fornecer qualquer informação bancária.</string>
    <string name="privacy_policy_subtitle1_1">Entidades Externas</string>
    <string name="privacy_policy_subtitle1_1_text_0">As transações realizadas na aplicação estaram alojadas num Open Source Distributed Ledger fornecido pela fundação IOTA (FI). A FI pode guardar ou receber informação sobre a sua utilização da aplicação e o seu histórico ao longo do tempo. No entanto, toda a informação guardada pela FI é Informação Não-Pessoal Identificável (INPI), ou seja, são dados anónimos que não permitem a identificação do utilizador. Para mais informação sobre a politica de privacidade da FI e praticas de negócio, por favor consulte a a página de politica de privacidade da mesma</string>
    <string name="privacy_policy_subtitle1_1_text_1">(https://www.iota.org/research/privacy-policy).</string>
    <string name="privacy_policy_subtitle1_1_text_2">Os dados recolhidos sobre a utilização da aplicação, assim como a funcionalidade a aplicação em si, vão ser monotorzadas através da plataforma Fabric.io. Toda a informação guardada nesta plataforma é Informação Não-Pessoal Identificável. Para mais informação acerca da politica de privacidade do Fabric.io, consulte a páginaOs dados recolhidos sobre a utilização da aplicação, assim como a funcionalidade a aplicação em si, vão ser monotorzadas através da plataforma Fabric.io. Toda a informação guardada nesta plataforma é Informação Não-Pessoal Identificável. Para mais informação acerca da politica de privacidade do Fabric.io, consulte a página</string>
    <string name="project_email">smile.miti2018@gmail.com</string>
    <string name="privacy_policy_subtitle1_2">Ligação a websites externos</string>
    <string name="privacy_policy_subtitle1_2_text">A nossa aplicação inclui ligação ao website da EEM que não é operado nem controlado por nós. Tenha em consideração que não somos responsáveis pelas politicas de privacidade e segurança deste website. Encorajamos a consultar e rever as politicas de pivacidade do website da EEM e a ter consciência da informação que submete. </string>
    <string name="privacy_policy_subtitle2">Que tipo de informação é guardada</string>
    <string name="privacy_policy_subtitle2_1">Informação que fornece diretamente</string>
    <string name="privacy_policy_subtitle2_1_text">Ao utilizar a aplicação está a fornecer informação sobre quando utiliza a aplicação, incluindo quando se regista e quando faz log in.\n\nEsta informaçãp inclui, mas não é limitada a, Informação Pessoal Identificável (IPI): nome, enderço de email, username, identificador do dispositivo e outras informações que o podem identificar.\n\nNão é considerada informação pessoal aquela que inclui informação que foi anonimizada ou agregada e que não pode ser utilizada para identificar uma pessoa especifica, seja em combinação com outras informações ou não.\n\nA Informação Não-Pessoal Identificável, inclui:\n\n
- Informaçãos sobre as atividades realizadas na aplicação;\n
- Informação sobre os padrões de consumo e produção de energia;\n
- Informação sobre o seu contrato de energia elétrica, nomeadamente: tensão de distribuição, portência contratada, tarifa e ciclo (se aplicável);\n
- Informação sobre o seu sistema fotovoltaico (numero de paineis e respetiva potência) e medidores de energia (identificador). </string>
    <string name="privacy_policy_subtitle2_2">Informação que guardamos automaticamente</string>
    <string name="privacy_policy_subtitle2_2_text">Ao utilizar a aplicação íremos receber e guardar informação acerda do(s) seu(s) dispositivo(s) automáticamente usando technologia de recolha de dados. Esta informação inclui:\n\n
- O identificador do seu dispositivo;\n
- O tipo de dispositivo móvel e sistema operativoque utiliza para aceder à nossa aplicação;\n
- O seu endereço IP;\n
- O conteúdo que visualiza, os componentes que utiliza, e a data e hora de visita;\n
- Informação guardada por entidades externas que nos fornecem serviços.\n</string>
    <string name="privacy_policy_subtitle3">Como é usada a informação que é guardada</string>
    <string name="privacy_policy_subtitle3_text">Todos os dados mencionados anteriormente e a informação recolhida durant o estudo vão ser utilizados pelo M-ITI somente para fins de investigação. No entanto, a sua informação pessoal nunca será revelada em qualquer publicação ou dissertação.\n\nAdicionalmente a utilizações mencionadas no paragrafo 1 (Quem guarda a informação e porquê), nós poderemos utilizar a informação recebida para:\n\n- Relembrar a informação, de forma a que não tenha que re-introduzir a mesma da próxima vez que utilizar a aplicação;\n- Fornecer, melhorar, testar e monitorizar a eficiência da plataforma;\n- Diagnosticar ou fixar problemas tecnológicos;\n- Comunicar consigo acerca da sua conta e para resolver problemas acerca da mesma. Quando necessitarmos de o contactar por estas razões, será contactado via e-mail, telemóvel, SMS e notificações na aplicação. </string>
    <string name="privacy_policy_subtitle3_1">Informação que partilhamos com os utilizadores</string>
    <string name="privacy_policy_subtitle3_1_text">A informação que partilhará com os outros utilizadores é:\n\n- o seu nome;\n-a sua foto de perfil;\n-transações (apenas poderá ver as transações em que é comprador ou vendedor).\n\nA qualquer momento, acedendo às "definições", poderá modificar o seu nome e/ou foto de perfil, assim como negar o direito de partilhar essa informação(nome e fotografia) com os outros utilizadores.</string>
    <string name="privacy_policy_subtitle4">Os seus direitos de ver e alterar a informção que nos forneceu voluntariamente</string>
    <string name="privacy_policy_subtitle4_text">Tem o direito de aceder, modificar ou apagar a informação que nos forneceu acedendo a opção de "Definições". </string>
    <string name="privacy_policy_subtitle5">Até quando guardamos a sua informação</string>
    <string name="privacy_policy_subtitle5_text"> A sua informação será guardada pelo tempo necessário ao serviços desta plataforma. Este periodo poderá ir até ao final do projeto SMILE, Maio de 2021</string>
    <string name="privacy_policy_subtitle6">Como asseguramos a informação</string>
    <string name="privacy_policy_subtitle6_text">Foram implementada medidas de segurança para proteger a informação que vamos obter através da aplicação. São estas medidas contra perda, uso indevido, acesso não autorizado, divulgação, alteração ou destruição. O acesso a dados e technologia relacionada com a informação do utilizador é protegido com palavra-passe e limitado a acesso pessoal. Em adição, usamos technologia standard para manter a informação de cada utilizador segura enquanto esta está no servidor do M-ITI.  No entanto, tirando estas medidas, os nossos sistemas de TI podem ser comprometidos por entidades malfeitoras que não tenham acesso autorizado aos dados através erros técnicos ou humanos. Ao utilizar, aceder e registar-se na aplicação, concorda que o M-ITI não é responsavel por qualquer perda ou danos de qualquer tipo decorrente ou relacionado com falhas de segurança, violação de quaisquer regras de privacidade ou medidas de segurança ou interceção das transmissões de dados. Qualquer transamissão de dados feita por si é da sua unica e exclusiva responsabilidade.\n\nA segurança da sua informação depende também de si. É lhe dado acesso à informação através de uma palavra-passe escolhida por si. É responsável por manter esta palavra-passe confidencial. Pedimos-lhe que não a partihe com ninguém. </string>
    <string name="share_data_tilte">A aplicação precisa da sua permissão para partilhar alguns dados com a comunidade</string>
    <string name="share_data_description">Se pretende comparar a sua utilização de energias renováveis com os a dos seus vizinhos, precisamos da sua permissão para partilhar os dados de consumo de energias renováveis.</string>
    <string name="share_data_changes">Pode alterar esta escolha a qualquer momento nas definições em \"Definições da Conta\".</string>
    <string name="button_allow">Permitir</string>
    <string name="button_not_allow">Não Permitir</string>
    <string name="dialog_pin_title">Insira o PIN:</string>
    <string name="dialog_pin_description">Por favor insira o PIN que recebeu no endereço de email que usou para se registar. Caso não tenha recebido o email verifique que o mesmo está correto. Em caso de dúvidas contacte: smile.miti2018@gmail.com.</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancelar</string>
</resources>