<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.thesis.smile.presentation.privacy_policy.PrivacyPolicyViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            style="@style/Common"

            android:id="@+id/llTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="top">

            <TextView
                style="@style/TextTitles"
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:gravity="left"
                android:layout_weight="7"
                android:text="@string/privacy_policy_title"/>
            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_weight="3"
                android:gravity="right"
                android:onClick="@{v -> viewModel.onCloseClick()}"
                android:src="@drawable/ic_close"/>

        </LinearLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="36dp"
                app:layout_constraintTop_toBottomOf="@id/llTitle"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="36dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_par1"/>

                <TextView
                    style="@style/Text4"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle1"/>
                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle1_text"/>

                <TextView
                    style="@style/Text18"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle1_1"/>

                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle1_1_text_0"/>
                <TextView
                    style="@style/Text2"
                    android:id="@+id/link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:onClick="@{v -> viewModel.onLinkClick()}"
                    android:text="@string/privacy_policy_subtitle1_1_text_1"/>
                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle1_1_text_2"/>
                <TextView
                    style="@style/Text2"
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:onClick="@{v -> viewModel.onEmailClick()}"
                    android:text="@string/project_email"/>

                <TextView
                    style="@style/Text18"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle1_2"/>

                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle1_2_text"/>


                <TextView
                    style="@style/Text4"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle2"/>
                <TextView
                    style="@style/Text18"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle2_1"/>

                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle2_1_text"/>

                <TextView
                    style="@style/Text18"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle2_2"/>

                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle2_2_text"/>

                <TextView
                    style="@style/Text4"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle3"/>

                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle3_text"/>


                <TextView
                    style="@style/Text18"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle3_1"/>

                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle3_1_text"/>

                <TextView
                    style="@style/Text4"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle4"/>

                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle4_text"/>


                <TextView
                    style="@style/Text4"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle5"/>
                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="12dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle5_text"/>

                <TextView
                    style="@style/Text4"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle6"/>
                <TextView
                    style="@style/Text2"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/privacy_policy_subtitle6_text"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>



    </LinearLayout>
</layout>